exercice avant correction

--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
 
             <div id="fifthLign">
                 
-                    <p id="totalPrice">459€</p>
+                <p id="totalPrice">459€</p>
                 
                 <div>
-                    <p>TTC / pers.</p>
+                    <p>TTC <br>/ pers.</p>
                 </div>
                 <div>
                     <p>ⓘ</p>
@@ -55,7 +55,7 @@
 
             <div id="seventhLign">
                 <img id="logo3x" src="assets/img/logo3x.svg" alt="logo-x3">
-                <p>153€ x 3 <sup id="logo-i">ⓘ</sup></p>
+                <p>153€ x 3 ⓘ</p>
             </div>
         </div>
 
